@@ -557,7 +557,6 @@ parameter_list|,
 name|Filter
 name|filter
 parameter_list|,
-specifier|final
 name|int
 name|nDocs
 parameter_list|)
@@ -579,6 +578,20 @@ literal|"nDocs must be> 0"
 argument_list|)
 throw|;
 block|}
+name|nDocs
+operator|=
+name|Math
+operator|.
+name|min
+argument_list|(
+name|nDocs
+argument_list|,
+name|reader
+operator|.
+name|maxDoc
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|TopScoreDocCollector
 name|collector
 init|=
@@ -661,7 +674,6 @@ parameter_list|,
 name|Filter
 name|filter
 parameter_list|,
-specifier|final
 name|int
 name|nDocs
 parameter_list|,
@@ -674,6 +686,20 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|nDocs
+operator|=
+name|Math
+operator|.
+name|min
+argument_list|(
+name|nDocs
+argument_list|,
+name|reader
+operator|.
+name|maxDoc
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|TopFieldCollector
 name|collector
 init|=
